# PeekWarden

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: AppSettings.cpp  AppSettings.h  BwClient.cpp  BwClient.h  I18n.cpp  I18n.h  QuickWindow.cpp  QuickWindow.h  SettingsDialog.cpp  SettingsDialog.h  TranslationCatalog.cpp  WinHotkey.cpp  WinHotkey.h  main.cpp
translations/: PeekWarden_ko.ts  README.md
